# Real-Time-AI-Trading-System

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 067d0c41e586_created_sentiment_table.py  28d1bfe34a7d_created_finnhub_news_table.py  41d67fc4f35f_removed_mean_columns_from_newsapi.py  56f35dac21a0_changed_ohlcv_table_name.py  604d72b1b59d_added_confidence_to_newsapi_table.py  6b0d51391066_created_newsapi_table.py  8849c688d775_added_signal_columns_to_returns_table.py  9825d1580556_added_label_to_newsapi_table.py  bc19b6c4b575_added_sentiment_mean_title_count_etc.py  bdd4544445bf_created_new_features_tables.py  c85db664ee38_changed_timestamp_to_publishedat.py  cc54f96c2aa6_added_description_content_to_newsapi.py  e279ef89b15a_initial_revision.py  f18b8e1afe57_added_regime_table.py
src/api/routes/: news.py  predict.py
src/core/: config.py  logger.py  logger_config.py  market_data.py
src/db/: create_engine.py  market_models.py  news_models.py  startup.py
src/db/crud/: general.py  market_models.py  news_models.py
src/features/market/: feature_engineering.py
src/features/sentiment/: finbert.py  sentiment.py
src/ingestion/: run_stream.py  run_yfinance_stream_history.py  yfinance_download.py
src/ingestion/adapters/: base.py  finnhub.py  yfinance.py
src/ingestion/news/: finnhub.py  newsapi.py
src/ingestion/news_ingestion/: base.py  google.py  newsapi.py
src/jobs/: market.py  model.py  news.py
src/ml/: xgboost.py
src/pipeline/: market_data.py  news_data.py
src/scripts/: backfill_news.py
src/streaming/: market_stream.py
src/training/: configs.py  data_loader.py  trainer.py
tests/: test_configs.py  test_data_loader.py  test_feature_engineering.py  test_health.py  test_scheduler.py  test_trainer.py  test_xgboost.py
