[project]
name = "real-time-ai-trading-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "redis[hiredis]>=7.4.0",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
