[project]
name = "real-time-ai-trading-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.3",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "feedparser>=6.0.12",
    "finnhub-python>=2.4.29",
    "joblib>=1.5.3",
    "newsapi>=0.1.1",
    "newsapi-python>=0.2.7",
    "praw>=7.8.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "redis[hiredis]>=7.4.0",
    "scikit-learn>=1.9.0",
    "sqlmodel>=0.0.38",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
    "xgboost>=3.3.0",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
